Fixed display Yandex.Maps in card (overflow:hidden was removed)

--- a/static/cardinfo.css
+++ b/static/cardinfo.css
@@ -8,7 +8,6 @@ html {
 	height: 13rem; 
 	margin: 1rem;
     font-size: 1rem;
-    overflow: hidden;
     padding: none;
     border: none;
     border-radius: 0.5rem;
